# ams-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  tabbed-app.html
api/: .env.example  manage.py  pyproject.toml
api/activities/: admin.py  models.py  serializers.py  urls.py  views.py
api/activities/migrations/: 0001_initial.py  0002_initial.py
api/alembic/: env.py
api/alembic/versions/: f2cf6a8f1f59_bootstrap_from_schema_sql.py
api/ams_dashboard/: asgi.py  auth_cognito.py  settings.py  spa.py  urls.py  wsgi.py
api/analytics/: admin.py  models.py  serializers.py  urls.py  views.py
api/analytics/migrations/: 0001_initial.py  0002_remove_customeranalytic_customer_analytics_org_env_def_unique_and_more.py
api/app/: auth.py  config.py  db.py  jira_sync.py  main.py  models.py  schemas.py
api/app/api/: organizations.py
api/app/jira/: client.py  sync.py
api/baskets/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
api/baskets/migrations/: 0001_initial.py  0002_backfill_installed_from_baskets.py
api/customers/: admin.py  apps.py  jira_client.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
api/customers/management/commands/: sync_jira_orgs.py  sync_jira_tickets.py  sync_jira_users.py
api/customers/migrations/: 0001_initial.py  0002_orguser.py  0003_environment_server_and_more.py  0004_backfill_default_environments.py
api/patching/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
api/patching/migrations/: 0001_initial.py  0002_patchexecution_patchexecutionabort_and_more.py
api/software/: admin.py  models.py  serializers.py  urls.py  views.py
api/software/migrations/: 0001_initial.py  0002_softwarerelease_status_and_more.py
api/staff/: admin.py  models.py  serializers.py  urls.py  views.py
api/staff/migrations/: 0001_initial.py
db/: schema.sql
docs/: DEPLOY.md
infra/: app.py  cdk.json
infra/infra/: infra_stack.py
infra/scripts/: grant-cdk-deploy-perms.sh
web/: package-lock.json  vite.config.ts
web/src/: App.css  App.tsx  api.ts  index.css  types.ts
web/src/components/: CustomerAnalyticsSection.tsx  CustomerSystemsSection.tsx  SidebarNav.tsx
web/src/pages/: ActivitiesPage.tsx  AnalyticsPage.tsx  BasketsPage.tsx  CriticalPage.tsx  CustomerDetailPage.tsx  CustomersPage.tsx  PatchExecutionPage.tsx  PlaceholderPage.tsx  (+2 more)
